@@ -15,13 +15,13 @@ import org.eclipse.jface.dialogs.MessageDialog;
 
 public class PythonRunner extends MainMenu{
 	private File file = null;
-	private String connection = "src/connection.txt", idled = "src/completed.txt", pythonPath = "C:/Python 27", pythonScriptPath = "src/check_review.py";
+	private String connection = "/Users/JustinChilleo/Repositories/Review_Checker/connection.txt", idled = "/Users/JustinChilleo/Repositories/Review_Checker/completed.txt", pythonPath = "C:/Python 27", pythonScriptPath = "/Users/JustinChilleo/Repositories/Review_Checker/check_review.py";
 	private String[] data = new String[10];
 	
 	public String[] connectToPython(){
-		makeFiles();
+		//makeFiles();
 		startPython();
-		idle();
+		//idle();
 		extractData();
 		return data;
 	}
@@ -35,19 +35,30 @@ public class PythonRunner extends MainMenu{
 			Process p = Runtime.getRuntime().exec(givePerms);
 			try {
 				p.waitFor();
-			} catch (InterruptedException e) {
+			} 
+			catch (InterruptedException e) {
 			}
-			p = Runtime.getRuntime().exec(command);
-			extractData(p);
+			ProcessBuilder pb = new ProcessBuilder(command);
+				pb.redirectErrorStream(true);
+			//Process pr = Runtime.getRuntime().exec(command);
+			Process pr = pb.start();
+			try {
+				pr.waitFor();
+			} catch (InterruptedException e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			}
+			//extractData(command);
+			//p = Runtime.getRuntime().exec(command);
 		} catch (IOException e) {
 			e.printStackTrace();
 		}
 	}
 	
 	private void idle(){
-		boolean sleep = true;
+		boolean sleep = false;
 		File waiting = new File(idled);
-		while(sleep){
+		while(sleep == false){
 			sleep = waiting.exists();
 		}
 		waiting.delete();
@@ -56,32 +67,33 @@ public class PythonRunner extends MainMenu{
 	
 	private void makeFiles(){
 	try {
-	      file = new File(connection);
-	      file.createNewFile();
-	      FileWriter fw = new FileWriter(file.getAbsoluteFile());
-			BufferedWriter bw = new BufferedWriter(fw);
-			bw.flush();
-			bw.write(sourcePath);
-			bw.newLine();
-			bw.close();
+	      //file = new File(connection);
+	      //file.createNewFile();
+	    //FileWriter fw = new FileWriter(file.getAbsoluteFile());
+			//BufferedWriter bw = new BufferedWriter(fw);
+			//bw.flush();
+			//bw.write(sourcePath);
+			//bw.newLine();
+			//bw.close();
    	} catch (Exception e) {e.printStackTrace();}
 	}
 	
-	private void extractData(Process p){
-		BufferedReader in = new BufferedReader(new 
-
-				InputStreamReader(p.getInputStream()));
+	private void extractData(String[] command){
+		
 				String line;
 				int position = 0;
 				try {
+					Process pr = Runtime.getRuntime().exec(command);
+					BufferedReader in = new BufferedReader(new InputStreamReader(pr.getInputStream()));
+					//idle();
 					while ((line = in.readLine()) != null) {
 						data[position] = line;
 					    position++;
 					}
 				} catch (IOException e) {}
 				try {
-					p.waitFor();
-				} catch (InterruptedException e) {}
+					//pr.waitFor();
+				} catch (Exception e) {}
 	}
 	
 	private void extractData(){
@@ -94,7 +106,6 @@ public class PythonRunner extends MainMenu{
 	 try{ 
 		 while (scan.hasNextLine()) {
             String line = scan.next();
-            line = scan.next();
             StringTokenizer st = new StringTokenizer(line);
             int position = 0;
             while(st.hasMoreTokens()){
